# wg-pong

./: Cargo.toml  README.md
src/: ball.rs  main.rs  paddle.rs  sprite.rs
src/shaders/: game.wgsl
