[package]
name = "wg-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt"] }
wgpu = { version = "0.19.4", features = ["vulkan-portability"] }
glfw = { version = "0.55.0", features = ["raw-window-handle-v0-6"] }
